Revise index.html for improved layout and content
Updated content and structure of the index.html file to enhance the presentation of the Codexpress Team website.

--- a/index.html
+++ b/index.html
@@ -8,66 +8,77 @@
 </head>
 <body>
 
+  <!-- HERO -->
   <header class="hero">
-    <h1 class="animate">Codexpress Team</h1>
-    <p class="animate">Tim pengembang website modern & fleksibel sesuai kebutuhan klien</p>
-    <a href="#team" class="btn animate">Kenali Tim</a>
+    <h1 class="animate">codexpress.id</h1>
+    <p class="animate">
+      Tim kecil, ide besar. Kami bikin website modern, ringan, dan enak dilihat.
+    </p>
+    <a href="#about" class="btn animate">Tentang Kami</a>
   </header>
 
+  <!-- ABOUT US + TEAM -->
   <section class="section" id="about">
-    <h2 class="section-title">Tentang Tim</h2>
-    <p class="section-desc">
-      Codexpress adalah tim kecil berisi 2 orang yang fokus pada pembuatan website modern,
-      performa optimal, dan desain yang menarik sesuai budget klien.
+    <h2 class="section-title animate">Tentang Kami</h2>
+    <p class="section-desc animate">
+      Codexpress adalah tim kecil yang beranggotakan 2 pelajar dari SMKN 1 Boyolangu,
+      jurusan RPL. Kami suka ngoding dan membangun website modern dengan tampilan yang clean,
+      performa yang ringan, dan pastinya nyaman dipakai. Walaupun masih pelajar,
+      kami serius dalam mengerjakan setiap project dan selalu menyesuaikan hasil
+      dengan kebutuhan serta budget klien.
     </p>
-  </section>
 
-  <section class="section" id="team">
-    <h2 class="section-title">Anggota Tim</h2>
+    <!-- TEAM -->
+    <h2 class="section-title animate" style="margin-top:60px;">Anggota Tim</h2>
 
     <div class="card-container">
       <div class="card animate">
+        <img src="images/member1.jpg" alt="Anggota 1">
         <h3>Anggota 1</h3>
         <p>Frontend Developer</p>
         <span>HTML • CSS • JavaScript</span>
       </div>
 
       <div class="card animate">
+        <img src="images/member2.jpg" alt="Anggota 2">
         <h3>Anggota 2</h3>
-        <p>UI / UX Designer</p>
+        <p>Backend / UI Designer</p>
         <span>UI Design • PHP • Database</span>
       </div>
     </div>
   </section>
 
-  <section class="section" id="skills">
-    <h2 class="section-title">Keahlian</h2>
+  <!-- SKILLS -->
+  <section class="section animate" id="skills">
+    <h2 class="section-title">Skills</h2>
 
     <div class="skills">
-      <span>Web Design</span>
-      <span>Frontend</span>
-      <span>Responsive Layout</span>
-      <span>Landing Page</span>
-      <span>Website Bisnis</span>
+      <span>HTML</span>
+      <span>CSS</span>
+      <span>JavaScript</span>
+      <span>UI Design</span>
+      <span>Responsive Web</span>
+      <span>PHP</span>
+      <span>MySQL</span>
     </div>
   </section>
 
-  <section class="section" id="project">
+  <!-- PROJECT -->
+  <section class="section animate" id="project">
     <h2 class="section-title">Project</h2>
     <p class="section-desc">
-      Beberapa project website yang telah dikerjakan akan ditampilkan di halaman ini.
+      Beberapa project website yang pernah kami kerjakan, mulai dari landing page,
+      website sekolah, sampai web sederhana sesuai kebutuhan klien.
     </p>
   </section>
 
-  <section class="section" id="contact">
-    <h2 class="section-title">Kontak</h2>
-    <p class="section-desc">
+  <!-- FOOTER + KONTAK -->
+  <footer>
+    <p>
       Email: codexpress@gmail.com <br>
       Instagram: @codexpress.id
     </p>
-  </section>
-
-  <footer>
+    <br>
     © 2026 Codexpress Team
   </footer>
 
