Revise hero section content in index.html
Updated the hero section text for improved messaging.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="hero">
     <h1 class="animate">codexpress.id</h1>
     <p class="animate">
-      Tim kecil, ide besar. Kami bikin website modern, ringan, dan enak dilihat.
+      Modern Look, Maximum Performance.
     </p>
     <a href="#about" class="btn animate">Tentang Kami</a>
   </header>
@@ -84,5 +84,6 @@
 
 </body>
 </html>
+
 
 
