Revise index.html for improved layout and content
Updated the HTML structure and content for better clarity and design.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 <body>
 
   <!-- HERO -->
-  <header class="hero">
-    <h1 class="animate">codexpress.id</h1>
-    <p class="animate">
-      Modern Look, Maximum Performance.
-    </p>
-    <a href="#about" class="btn animate">Tentang Kami</a>
-  </header>
+<header class="hero">
+  <div class="hero-content animate">
+    <h1>codexpress.id</h1>
+
+<p>
+Tim pelajar RPL yang fokus membuat website dengan tampilan profesional,
+ringan diakses, dan nyaman digunakan di semua perangkat.
+</p>
+
+<div class="hero-btns">
+  <a href="#project" class="btn-outline">Lihat Project</a>
+  <a href="#about" class="btn-outline">Tentang Kami</a>
+</div>
+
+  </div>
+</header>
 
   <!-- ABOUT US -->
   <section class="section" id="about">
@@ -23,7 +32,7 @@
     <div class="about-wrapper animate">
       <!-- TEKS KIRI -->
       <div class="about-text">
-        <h2 class="section-title">Tentang Kami</h2>
+        <h2 class="section-title">About Us</h2>
         <p class="section-desc">
           Codexpress adalah tim kecil yang beranggotakan 2 pelajar dari SMKN 1 Boyolangu,
           jurusan RPL. Kami suka ngoding dan membangun website modern dengan tampilan yang clean,
@@ -38,6 +47,36 @@
         <img src="images/logo.png" alt="Tentang Codexpress">
       </div>
     </div>
+    <!-- WHY CHOOSE US -->
+    <section class="section animate" id="why">
+      <h2 class="section-title">Kenapa Memilih Codexpress?</h2>
+      <p class="section-desc">
+        Kami tidak hanya membuat website, tapi memastikan website Anda terlihat modern,
+        berjalan ringan, dan nyaman digunakan di semua perangkat.
+      </p>
+
+      <div class="why-container">
+        <div class="why-card">
+          <h3>⚡ Performa Cepat</h3>
+          <p>Website dibuat ringan, cepat diakses, dan optimal di semua device.</p>
+        </div>
+
+        <div class="why-card">
+          <h3>📱 100% Responsive</h3>
+          <p>Tampilan tetap rapi dan nyaman di HP, tablet, maupun desktop.</p>
+        </div>
+
+        <div class="why-card">
+          <h3>🎨 Desain Modern</h3>
+          <p>Menggunakan tampilan clean, elegan, dan mengikuti tren desain terbaru.</p>
+        </div>
+
+        <div class="why-card">
+          <h3>💬 Fleksibel & Komunikatif</h3>
+          <p>Bisa menyesuaikan kebutuhan, revisi mudah, dan komunikasi cepat.</p>
+        </div>
+      </div>
+    </section>
 
     <!-- TEAM -->
     <h2 class="section-title animate" style="margin-top:80px;">Anggota Tim</h2>
