Fix HTML structure and add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>codexpress.id</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
@@ -41,6 +42,7 @@ ringan diakses, dan nyaman digunakan di semua perangkat.
           dengan kebutuhan serta budget klien.
         </p>
       </div>
+    </section>
 
       <!-- GAMBAR KANAN (TANPA BORDER) -->
       <div class="about-image">
@@ -79,6 +81,7 @@ ringan diakses, dan nyaman digunakan di semua perangkat.
     </section>
 
     <!-- TEAM -->
+  <section class="section">
     <h2 class="section-title animate" style="margin-top:80px;">Anggota Tim</h2>
 
     <div class="card-container">
